syntax = "proto3";

package sk.stuba.fei.asos.project24.plane;

option java_multiple_files = true;

service Plane {
  rpc FollowLocation(LocationRequest) returns (stream Location);
  rpc CurrentLocation(LocationRequest) returns (Location);
  rpc Information(PlaneInfoRequest) returns (PlaneInfo);
}

message Location {
  double latitude = 1;
  double longitude = 2;
  Status status = 3;
}

message PlaneInfo {
  string id = 1;
  int32 capacity = 2;
  string name = 3;
  string start_city = 4;
  string end_city = 5;
}

message LocationRequest {

}

message PlaneInfoRequest {

}

enum Status {
  STATUS_UNSPECIFIED = 0;
  AIRBORNE = 1;
  LANDED = 2;
  CRASHED = 3;
}